FIXED - top bar z-index

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -511,6 +511,8 @@ html {
 }
 
 #top-bar {
+  z-index: 9999;
+  
   position: fixed;
   height: 100px;
 
